rename fail2ban to netfilter
