# data/Dockerfiles/netfilter/server.py
@@ -60,72 +60,72 @@ def logCrit(message):
 def logInfo(message):
   log('info', message)
 
-def refreshF2boptions():
-  global f2boptions
+def refreshNetfilteroptions():
+  global netfilteroptions
   global quit_now
   global exit_code
 
-  f2boptions = {}
+  netfilteroptions = {}
 
-  if not r.get('F2B_OPTIONS'):
-    f2boptions['ban_time'] = r.get('F2B_BAN_TIME')
-    f2boptions['max_ban_time'] = r.get('F2B_MAX_BAN_TIME')
-    f2boptions['ban_time_increment'] = r.get('F2B_BAN_TIME_INCREMENT')
-    f2boptions['max_attempts'] = r.get('F2B_MAX_ATTEMPTS')
-    f2boptions['retry_window'] = r.get('F2B_RETRY_WINDOW')
-    f2boptions['netban_ipv4'] = r.get('F2B_NETBAN_IPV4')
-    f2boptions['netban_ipv6'] = r.get('F2B_NETBAN_IPV6')
+  if not r.get('NETFILTER_OPTIONS'):
+    netfilteroptions['ban_time'] = r.get('NETFILTER_BAN_TIME')
+    netfilteroptions['max_ban_time'] = r.get('NETFILTER_MAX_BAN_TIME')
+    netfilteroptions['ban_time_increment'] = r.get('NETFILTER_BAN_TIME_INCREMENT')
+    netfilteroptions['max_attempts'] = r.get('NETFILTER_MAX_ATTEMPTS')
+    netfilteroptions['retry_window'] = r.get('NETFILTER_RETRY_WINDOW')
+    netfilteroptions['netban_ipv4'] = r.get('NETFILTER_NETBAN_IPV4')
+    netfilteroptions['netban_ipv6'] = r.get('NETFILTER_NETBAN_IPV6')
   else:
     try:
-      f2boptions = json.loads(r.get('F2B_OPTIONS'))
+      netfilteroptions = json.loads(r.get('NETFILTER_OPTIONS'))
     except ValueError:
-      print('Error loading F2B options: F2B_OPTIONS is not json')
+      print('Error loading NETFILTER options: NETFILTER_OPTIONS is not json')
       quit_now = True
       exit_code = 2
 
-  verifyF2boptions(f2boptions)
-  r.set('F2B_OPTIONS', json.dumps(f2boptions, ensure_ascii=False))
+  verifyNetfilteroptions(netfilteroptions)
+  r.set('NETFILTER_OPTIONS', json.dumps(netfilteroptions, ensure_ascii=False))
 
-def verifyF2boptions(f2boptions):
-  verifyF2boption(f2boptions,'ban_time', 1800)
-  verifyF2boption(f2boptions,'max_ban_time', 10000)
-  verifyF2boption(f2boptions,'ban_time_increment', True)
-  verifyF2boption(f2boptions,'max_attempts', 10)
-  verifyF2boption(f2boptions,'retry_window', 600)
-  verifyF2boption(f2boptions,'netban_ipv4', 32)
-  verifyF2boption(f2boptions,'netban_ipv6', 128)
+def verifyNetfilteroptions(netfilteroptions):
+  verifyNetfilteroption(netfilteroptions,'ban_time', 1800)
+  verifyNetfilteroption(netfilteroptions,'max_ban_time', 10000)
+  verifyNetfilteroption(netfilteroptions,'ban_time_increment', True)
+  verifyNetfilteroption(netfilteroptions,'max_attempts', 10)
+  verifyNetfilteroption(netfilteroptions,'retry_window', 600)
+  verifyNetfilteroption(netfilteroptions,'netban_ipv4', 32)
+  verifyNetfilteroption(netfilteroptions,'netban_ipv6', 128)
 
-def verifyF2boption(f2boptions, f2boption, f2bdefault):
-  f2boptions[f2boption] = f2boptions[f2boption] if f2boption in f2boptions and f2boptions[f2boption] is not None else f2bdefault
+def verifyNetfilteroption(netfilteroptions, netfilteroption, netfilterdefault):
+  netfilteroptions[netfilteroption] = netfilteroptions[netfilteroption] if netfilteroption in netfilteroptions and netfilteroptions[netfilteroption] is not None else netfilterdefault
 
-def refreshF2bregex():
-  global f2bregex
+def refreshNetfilterregex():
+  global netfilterregex
   global quit_now
   global exit_code
-  if not r.get('F2B_REGEX'):
-    f2bregex = {}
-    f2bregex[1] = 'Zyner One UI: Invalid password for .+ by ([0-9a-f\.:]+)'
-    f2bregex[2] = 'Rspamd UI: Invalid password by ([0-9a-f\.:]+)'
-    f2bregex[3] = 'warning: .*\[([0-9a-f\.:]+)\]: SASL .+ authentication failed: (?!.*Connection lost to authentication server).+'
-    f2bregex[4] = 'warning: non-SMTP command from .*\[([0-9a-f\.:]+)]:.+'
-    f2bregex[5] = 'NOQUEUE: reject: RCPT from \[([0-9a-f\.:]+)].+Protocol error.+'
-    f2bregex[6] = '-login: Disconnected.+ \(auth failed, .+\): user=.*, method=.+, rip=([0-9a-f\.:]+),'
-    f2bregex[7] = '-login: Aborted login.+ \(auth failed .+\): user=.+, rip=([0-9a-f\.:]+), lip.+'
-    f2bregex[8] = '-login: Aborted login.+ \(tried to use disallowed .+\): user=.+, rip=([0-9a-f\.:]+), lip.+'
-    f2bregex[9] = 'SOGo.+ Login from \'([0-9a-f\.:]+)\' for user .+ might not have worked'
-    f2bregex[10] = '([0-9a-f\.:]+) \"GET \/SOGo\/.* HTTP.+\" 403 .+'
-    r.set('F2B_REGEX', json.dumps(f2bregex, ensure_ascii=False))
+  if not r.get('NETFILTER_REGEX'):
+    netfilterregex = {}
+    netfilterregex[1] = 'Zyner One UI: Invalid password for .+ by ([0-9a-f\.:]+)'
+    netfilterregex[2] = 'Rspamd UI: Invalid password by ([0-9a-f\.:]+)'
+    netfilterregex[3] = 'warning: .*\[([0-9a-f\.:]+)\]: SASL .+ authentication failed: (?!.*Connection lost to authentication server).+'
+    netfilterregex[4] = 'warning: non-SMTP command from .*\[([0-9a-f\.:]+)]:.+'
+    netfilterregex[5] = 'NOQUEUE: reject: RCPT from \[([0-9a-f\.:]+)].+Protocol error.+'
+    netfilterregex[6] = '-login: Disconnected.+ \(auth failed, .+\): user=.*, method=.+, rip=([0-9a-f\.:]+),'
+    netfilterregex[7] = '-login: Aborted login.+ \(auth failed .+\): user=.+, rip=([0-9a-f\.:]+), lip.+'
+    netfilterregex[8] = '-login: Aborted login.+ \(tried to use disallowed .+\): user=.+, rip=([0-9a-f\.:]+), lip.+'
+    netfilterregex[9] = 'SOGo.+ Login from \'([0-9a-f\.:]+)\' for user .+ might not have worked'
+    netfilterregex[10] = '([0-9a-f\.:]+) \"GET \/SOGo\/.* HTTP.+\" 403 .+'
+    r.set('NETFILTER_REGEX', json.dumps(netfilterregex, ensure_ascii=False))
   else:
     try:
-      f2bregex = {}
-      f2bregex = json.loads(r.get('F2B_REGEX'))
+      netfilterregex = {}
+      netfilterregex = json.loads(r.get('NETFILTER_REGEX'))
     except ValueError:
-      print('Error loading F2B options: F2B_REGEX is not json')
+      print('Error loading NETFILTER options: NETFILTER_REGEX is not json')
       quit_now = True
       exit_code = 2
 
-if r.exists('F2B_LOG'):
-  r.rename('F2B_LOG', 'NETFILTER_LOG')
+if r.exists('NETFILTER_LOG'):
+  r.rename('NETFILTER_LOG', 'NETFILTER_LOG')
 
 def zyneroneChainOrder():
   global lock
@@ -157,13 +157,13 @@ def zyneroneChainOrder():
 
 def ban(address):
   global lock
-  refreshF2boptions()
-  BAN_TIME = int(f2boptions['ban_time'])
-  BAN_TIME_INCREMENT = bool(f2boptions['ban_time_increment'])
-  MAX_ATTEMPTS = int(f2boptions['max_attempts'])
-  RETRY_WINDOW = int(f2boptions['retry_window'])
-  NETBAN_IPV4 = '/' + str(f2boptions['netban_ipv4'])
-  NETBAN_IPV6 = '/' + str(f2boptions['netban_ipv6'])
+  refreshNetfilteroptions()
+  BAN_TIME = int(netfilteroptions['ban_time'])
+  BAN_TIME_INCREMENT = bool(netfilteroptions['ban_time_increment'])
+  MAX_ATTEMPTS = int(netfilteroptions['max_attempts'])
+  RETRY_WINDOW = int(netfilteroptions['retry_window'])
+  NETBAN_IPV4 = '/' + str(netfilteroptions['netban_ipv4'])
+  NETBAN_IPV6 = '/' + str(netfilteroptions['netban_ipv6'])
 
   ip = ipaddress.ip_address(address)
   if type(ip) is ipaddress.IPv6Address and ip.ipv4_mapped:
@@ -215,7 +215,7 @@ def ban(address):
         rule.target = target
         if rule not in chain.rules:
           chain.insert_rule(rule)
-    r.hset('F2B_ACTIVE_BANS', '%s' % net, cur_time + NET_BAN_TIME)
+    r.hset('NETFILTER_ACTIVE_BANS', '%s' % net, cur_time + NET_BAN_TIME)
   else:
     logWarn('%d more attempts in the next %d seconds until %s is banned' % (MAX_ATTEMPTS - bans[net]['attempts'], RETRY_WINDOW, net))
 
@@ -223,7 +223,7 @@ def unban(net):
   global lock
   if not net in bans:
    logInfo('%s is not banned, skipping unban and deleting from queue (if any)' % net)
-   r.hdel('F2B_QUEUE_UNBAN', '%s' % net)
+   r.hdel('NETFILTER_QUEUE_UNBAN', '%s' % net)
    return
   logInfo('Unbanning %s' % net)
   if type(ipaddress.ip_network(net)) is ipaddress.IPv4Network:
@@ -244,8 +244,8 @@ def unban(net):
       rule.target = target
       if rule in chain.rules:
         chain.delete_rule(rule)
-  r.hdel('F2B_ACTIVE_BANS', '%s' % net)
-  r.hdel('F2B_QUEUE_UNBAN', '%s' % net)
+  r.hdel('NETFILTER_ACTIVE_BANS', '%s' % net)
+  r.hdel('NETFILTER_QUEUE_UNBAN', '%s' % net)
   if net in bans:
     bans[net]['attempts'] = 0
     bans[net]['ban_counter'] += 1
@@ -262,11 +262,11 @@ def permBan(net, unban=False):
       if rule not in chain.rules and not unban:
         logCrit('Add host/network %s to blacklist' % net)
         chain.insert_rule(rule)
-        r.hset('F2B_PERM_BANS', '%s' % net, int(round(time.time())))
+        r.hset('NETFILTER_PERM_BANS', '%s' % net, int(round(time.time())))
       elif rule in chain.rules and unban:
         logCrit('Remove host/network %s from blacklist' % net)
         chain.delete_rule(rule)
-        r.hdel('F2B_PERM_BANS', '%s' % net)
+        r.hdel('NETFILTER_PERM_BANS', '%s' % net)
   else:
     with lock:
       chain = iptc.Chain(iptc.Table6(iptc.Table6.FILTER), 'ZYNERONE')
@@ -277,11 +277,11 @@ def permBan(net, unban=False):
       if rule not in chain.rules and not unban:
         logCrit('Add host/network %s to blacklist' % net)
         chain.insert_rule(rule)
-        r.hset('F2B_PERM_BANS', '%s' % net, int(round(time.time())))
+        r.hset('NETFILTER_PERM_BANS', '%s' % net, int(round(time.time())))
       elif rule in chain.rules and unban:
         logCrit('Remove host/network %s from blacklist' % net)
         chain.delete_rule(rule)
-        r.hdel('F2B_PERM_BANS', '%s' % net)
+        r.hdel('NETFILTER_PERM_BANS', '%s' % net)
 
 def quit(signum, frame):
   global quit_now
@@ -313,13 +313,13 @@ def clear():
       filter_table.commit()
       filter_table.refresh()
       filter_table.autocommit = True
-    r.delete('F2B_ACTIVE_BANS')
-    r.delete('F2B_PERM_BANS')
+    r.delete('NETFILTER_ACTIVE_BANS')
+    r.delete('NETFILTER_PERM_BANS')
     pubsub.unsubscribe()
 
 def watch():
-  logInfo('Watching Redis channel F2B_CHANNEL')
-  pubsub.subscribe('F2B_CHANNEL')
+  logInfo('Watching Redis channel NETFILTER_CHANNEL')
+  pubsub.subscribe('NETFILTER_CHANNEL')
 
   global quit_now
   global exit_code
@@ -327,8 +327,8 @@ def watch():
   while not quit_now:
     try:
       for item in pubsub.listen():
-        refreshF2bregex()
-        for rule_id, rule_regex in f2bregex.items():
+        refreshNetfilterregex()
+        for rule_id, rule_regex in netfilterregex.items():
           if item['data'] and item['type'] == 'message':
             try:
               result = re.search(rule_regex, item['data'])
@@ -435,12 +435,12 @@ def snat6(snat_target):
 def autopurge():
   while not quit_now:
     time.sleep(10)
-    refreshF2boptions()
-    BAN_TIME = int(f2boptions['ban_time'])
-    MAX_BAN_TIME = int(f2boptions['max_ban_time'])
-    BAN_TIME_INCREMENT = bool(f2boptions['ban_time_increment'])
-    MAX_ATTEMPTS = int(f2boptions['max_attempts'])
-    QUEUE_UNBAN = r.hgetall('F2B_QUEUE_UNBAN')
+    refreshNetfilteroptions()
+    BAN_TIME = int(netfilteroptions['ban_time'])
+    MAX_BAN_TIME = int(netfilteroptions['max_ban_time'])
+    BAN_TIME_INCREMENT = bool(netfilteroptions['ban_time_increment'])
+    MAX_ATTEMPTS = int(netfilteroptions['max_attempts'])
+    QUEUE_UNBAN = r.hgetall('NETFILTER_QUEUE_UNBAN')
     if QUEUE_UNBAN:
       for net in QUEUE_UNBAN:
         unban(str(net))
@@ -492,7 +492,7 @@ def whitelistUpdate():
   global WHITELIST
   while not quit_now:
     start_time = time.time()
-    list = r.hgetall('F2B_WHITELIST')
+    list = r.hgetall('NETFILTER_WHITELIST')
     new_whitelist = []
     if list:
       new_whitelist = genNetworkList(list)
@@ -507,7 +507,7 @@ def blacklistUpdate():
   global BLACKLIST
   while not quit_now:
     start_time = time.time()
-    list = r.hgetall('F2B_BLACKLIST')
+    list = r.hgetall('NETFILTER_BLACKLIST')
     new_blacklist = []
     if list:
       new_blacklist = genNetworkList(list)
